<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventEditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:hint="@string/event_name"
        android:autofillHints="event name"
        android:id="@+id/eventNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"/>

    <TextView
        android:id="@+id/eventDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <Button
        android:id="@+id/eventTimeTV"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:width="300dp"
        android:height="10dp"
        android:onClick="popTimePicker"
        android:text="@string/select_time"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:onClick="saveEventAction"
        android:text="@string/save"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

<!--    <Button-->
<!--        android:id="@+id/deleteNoteButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:background="@null"-->
<!--        android:onClick="deleteEventAction"-->
<!--        android:text="Delete"-->
<!--        android:textColor="@color/red"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold" />-->


</LinearLayout>