...
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/grey_nyc_unsplash">

    <Button
        android:id="@+id/weeklyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:onClick="weeklyAction"
        android:text="@string/weekly"
...
