...


    </RelativeLayout>


    <TextView
        android:id="@+id/textview_first"
        android:layout_width="351dp"
        android:layout_height="113dp"
        android:fontFamily="@font/muli_bold"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
...
        android:text="@string/welcome_to_workflow"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#F2F4F4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/create_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />


...
